<resources>
    <string name="app_name">PharmacyTechPractice</string>
    <string name="brand">Brand </string>
    <string name="direction">Direction: </string>
    <string name="add_drug_info">Add Drug</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="generic">Generic </string>
    <string name="function">Function </string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="add_pharmacy_abbreviations">Add Pharmacy Abbreviations</string>
    <string name="add_data">Add Data</string>
    <string name="abbreviation">Abbreviation:</string>
    <string name="test_sig_code">Test Sig Code</string>
    <string name="check">Check</string>
    <string name="translation">Translation:</string>
    <string name="title_activity_drug_details">DrugDetailsActivity</string>
    <string name="dose_form">Dosage Form</string>
    <string name="common_uses">Common Uses</string>
    <string name="side_effects">Side Effects</string>
    <string name="comments">Comments</string>
    <string name="by_mouth">PO</string>
    <string name="injection">INJ</string>
    <string name="suppositories">Supp</string>
    <string name="nasal_spray">nasal spray</string>
    <string name="aerosol">aerosol</string>
    <string name="inhalation">oral inhalation</string>
    <string name="topically">TOP</string>
    <string name="eye_drop">eye drop</string>
    <string name="vaginal">vaginal</string>
    <string name="implant">implant</string>
    <string name="scheduled">Scheduled</string>
    <string name="I">I</string>
    <string name="II">II</string>
    <string name="III">III</string>
    <string name="IV">IV</string>
    <string name="None">None</string>
</resources>
